--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.22.0",
+    "eslint-config-next": "^15.2.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
     "tailwindcss": "^4",
