--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^15.2.1",
+    "firebase": "^11.4.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
