--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start",
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@next/env": "^15.2.1",
-    "firebase": "^11.4.0",
+    "autoprefixer": "^10.4.21",
+    "cloudinary": "^2.5.1",
     "formidable": "^3.5.2",
-    "next": "15.2.1",
+    "next": "^15.2.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -27,7 +29,6 @@
     "eslint-config-next": "^15.2.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
-    "tailwindcss": "^4",
     "typescript": "5.8.2"
   }
 }
