--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
   },
   "dependencies": {
     "@next/env": "^15.2.1",
-    "autoprefixer": "^10.4.21",
     "cloudinary": "^2.5.1",
     "formidable": "^3.5.2",
     "next": "^15.2.1",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.12"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-config-next": "^15.2.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.8.2"
   }
 }
