Updated .gitignore to exclude virtual environments and large files

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,22 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignore Python virtual environments
+sockmatch-venv/
+venv/
+
+# Ignore Python bytecode and cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Ignore system files
+.DS_Store
+
+# Ignore logs
+*.log
+
+# Ignore large library binaries
+*.dylib
