--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,41 @@
+# --- Node ---
+node_modules/
+.next/
+.env
+.env.local
+dist/
+out/
+
+# --- Python (TensorFlow, virtualenvs) ---
+__pycache__/
+*.py[cod]
+*.so
+*.pyd
+*.pyo
+*.pkl
+sockmatch-venv/
+venv/
+.env/
+
+# --- System files ---
+.DS_Store
+Thumbs.db
+
+# --- Logs ---
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# --- Build ---
+*.zip
+*.tar.gz
+
+# --- Images or embeddings (optional) ---
+*.jpg
+*.png
+*.webp
+*.json
 # Ignore Python bytecode and cache
 __pycache__/
 *.pyc
