--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NEXT_PUBLIC_DISABLE_ESLINT=true next build",
     "export": "next export",
     "start": "next start",
     "lint": "next lint"
@@ -18,7 +18,7 @@
     "axios": "^1.8.4",
     "cloudinary": "^2.5.1",
     "formidable": "^3.5.2",
-    "next": "^15.2.1",
+    "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,9 +31,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.22.0",
-    "eslint-config-next": "^15.2.1",
-    "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.3.2",
